software-center (1.1.7) UNRELEASED; urgency=low

  * softwarecenter/view/availablepane.py:
    - fixes in the search when in a category with sub-categories
  * data/software-center.menu.in:
    - use SCDontDisplay and SCType in System Packages menu to
      allow searching in all system packages again
  * README:
    - updated to include section term
  * data/software-center.menu.in:
    - move the previous seperate applications.menu in here to support 
      subcategories that mix applications and non-applications
      this makes /usr/share/app-install/desktop/applications.menu
      obsolete for software-center
    - update to reflect the sub-category layout from the spec
  * softwarecenter/db/database.py:
    - fix sorting for mixed app/package display
  * softwarecenter/db/update.py:
    - write out archive section (mail, admin, ...) into the xapian DB
  * softwarecenter/view/catview.py:
    - fix sub-category jumping back to (0,0) on going back
    - support mixed app/package section querries
    - support menu additions via "/usr/share/app-install/menu.d/*.menu"
    - support SCChannel as match for (sub)menus

 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 04 Jan 2010 16:38:31 +0100

software-center (1.1.6) lucid; urgency=low

  [ Michael Vogt ]
  * softwarecenter/view/pendingview.py:
    - fix race in _append_transaction()
  * softwarecenter/view/availablepane.py:
    - fix count of available applications in the status bar
    - append a pathbar element if a search is performed
  * softwarecenter/apt/apthistory.py:
    - add inteface to new /var/log/apt/history.log file
    - add find_terminal_log() that gives the matching terminal output
  * softwarecenter/db/database.py, softwarecenter/view/appview.py:
    - add higher ranks for exact package name matches
  * merged from lp:~lucian.grijincu/software-center/lucian 
    (many thanks)
  * softwarecenter/apt/aptcache.py:
    - add get_installed_automatic_depends_for_pkg() for better