@@ -1,5 +1,6 @@
 software-center (1.1.7) UNRELEASED; urgency=low
 
+  [ Michael Vogt ]
   * softwarecenter/view/availablepane.py:
     - fixes in the search when in a category with sub-categories
   * data/software-center.menu.in:
@@ -23,7 +24,13 @@ software-center (1.1.7) UNRELEASED; urgency=low
     - support menu additions via "/usr/share/app-install/menu.d/*.menu"
     - support SCChannel as match for (sub)menus
 
- -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 04 Jan 2010 16:38:31 +0100
+  [ Gary Lasker ]
+  * softwarecenter/distro/Ubuntu.py:
+    - merged string fix from Shane Fagan, many thanks (LP: #494845)
+  * po/software-center.pot:
+    - updated 
+
+ -- Gary Lasker <gary.lasker@canonical.com>  Tue, 05 Jan 2010 17:44:25 -0500
 
 software-center (1.1.6) lucid; urgency=low
 
